--- a/media/stylus/estilos.styl
+++ b/media/stylus/estilos.styl
@@ -830,7 +830,51 @@ table, th, td
 				text-decoration none
 				color black
 
+//Estilos mensajes
+#msj
+	font-family Roboto
+	background rgba(255, 255, 255, .88)
+	bottom 1em
+	border-radius .4em
+	left 1em
+	box-shadow 0px 0px 3px rgba(0, 0, 0, .45)
+	position fixed
+	padding 0 0 .6em 0
+	text-align center
+	width 300px
+	z-index 10000
+	& figure
+		display block
+		padding .5em 0
+		width 100%
+		& img
+			width 30px
+	& p
+		color #202020
+		padding .4em 0
+		margin-top .4em
+		font-weight bold
 
+.edit_msj
+	border 1px solid #21af7d
+	figure
+		background #49B591
+.delete_msj
+	border 1px solid #a11c1c
+	figure
+		background #c33232
+.complete_msj
+	border 1px solid #21af7d
+	figure
+		background #49B591
+.alert_msj
+	border 1px solid #d5d02f
+	figure
+		background #ddca00
+
+
+.hide
+	display none
 
 
 
